Index.html title updated
Title has been changed from Swathi Masetty Ux Designer to swathi UX Designer.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title>Swathi Masetty UX Designer | Front End Developer</title>
+<title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
 <header>
