--- a/expert.html
+++ b/expert.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title>About Swathi Masetty</title>
+<title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
 <header>
@@ -11,7 +11,7 @@
 <nav>
   <ul>
     <li><a href="index.html">Work</a></li>
-    <li><a href="about.html">About Me</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
@@ -20,73 +20,87 @@
 
 <main>
 <div>
-  <div>
-    <h1>About Me</h1>
-  </div>
+<div>
+<h1>CONNECT EXPERTS</h1>
 </div>
 <div>
   <div>
-
+<picture>
+  <source srcset="img/appscreen1.jpg" media="(max-width:767px)">
+  <img src="img/appscreen1.jpg" alt="apps splash screen">
+</picture>
+<div>
+  <div>
+    <h2>The Problem</h2>
+    <p>Our users, needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs.
+Because they want quick and professional advice on day to day problems.Quantitative and Qualitative measure: ‘ We will know this to be true when users are happy with our app, no. of people downloaded and using the app and from user reviews.
+</p>
+</div>
+<div>
+  <h2>User Research,Surveys and Interviews</h2>
+  <p>To bein with the project, I started with Competitive analysis, Then I conducted user surveys and interviews which gave me a good amount of data to proceed further into design process</p>
   <picture>
-    <source srcset="img/mypicture.png" media="(max-width:767px)">
-      <img src="img/mypicture.png" alt="Swathi Masetty">
-    </picture>
-
-
-    <div>
-      <div>
-      <h2>My Story</h2>
-        <p>
-          I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
-        </p>
-       <p>
-         My goal is to work as UX Designer and think in the customer point of view and design the things according to user goals and needs.
-         Simultaneously would like to work on my own cooking websites where users can find Tipps and hacks for better cooking.
-       </p>
-        <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" target="_blank"> Download my resume</a>
+    <source srcset="img/expert/img/Connect Experts_User surveys and interviews affinity mapping.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_User surveys and interviews affinity mapping.jpg" alt="surveys and interviews screen">
+  </picture>
 </div>
 
 <div>
-          <h2>Skills and Tools</h2>
-          <div class="row">
-          <div class="col-">
-          <h3>Relevant Skills</h3>
-          <ul>
-            <li>UX Theory</li>
-              <li>User Centered Design</li>
-              <li>Emotional and Visual Design</li>
-              <li>Competitive Analysis</li>
-              <li>Generative and Evaluative Research</li>
-              <li>user Personas and Business Requirements</li>
-              <li>Mobile-First and Responsive Design</li>
-              <li>Information Archietecture and user flows</li>
-              <li>Iterative Wireframing and Prototyping</li>
-              <li>Design Documentation and Presentation</li>
-            </ul>
-          </div>
-          <div>
-            <h3>Tools I use</h3>
-            <ul>
-              <li>Adobe XD</li>
-                <li>Figma</li>
-                <li>Photoshop</li>
-                <li>Competitive Analysis</li>
-                <li>Balsamiq</li>
-                <li>Yeplin</li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-  </div>
-
+  <h2>User Personas</h2>
+  <p>The two personas are Doro and Dycer, one is yound professional working as developer and other persona is trying to restart her career as developer.</p>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_User persona.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_User persona.jpg" alt="User Persona">
+  </picture>
+</div>
+<div>
+  <h2>Flow charts</h2>
+  <p>I created user journeys and user flows to draft their possible interactions with the apps.</p>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_User journey.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_User journey.jpg" alt="User journeys">
+  </picture>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_user flows.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_user flows.jpg" alt="User flows">
+  </picture>
+</div>
+<div>
+  <h2>Sketches</h2>
+  <p>The next steps is to create paper sketches or low-fidelity wireframes,here I quickly translated those design ideas into a paper wireframes that matches with the flowcharts.</p>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_Low Fidelity_1.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_Low Fidelity_1.jpg" alt="Paper sketches">
+  </picture>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_Low Fidelity_2.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_Low Fidelity_2.jpg" alt="Paper sketches_3">
+  </picture>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_Low Fidelity_3.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_Low Fidelity_3.jpg" alt="Paper sketches_3">
+  </picture>
+</div>
+<div>
+  <h2>Mid-Fidelity wireframes</h2>
+  <p>later I translated those paper sketches into mid-fidelity wireframes and allowed it to do user testing to make sure that it's simple and intutive.</p>
+  <p>Once I received feedback from users, I was able to to necessary actions accoridng to user review comments on my wireframes.</p>
+  <picture>
+    <source srcset="img/expert/img/Connect Experts_Mid Fidelity wireframes.jpg" media="(max-width:767px)">
+    <img src="img/expert/img/Connect Experts_Mid Fidelity wireframes.jpg" alt="Mid fidelitywireframes">
+  </picture>
+</div>
+<div>
+  <h2>Future of CONNECT EXPERTS</h2>
+  <p>Looking forward to put thos best practices and ideas to recreate any kind of connect experts in any field.</p>
+</div>
+</div>
+</div>
+</div>
 </main>
 
-<footer id="contact">
-  <div>
+<footer>
+<div>
 <h2>Contact</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
@@ -113,7 +127,6 @@
 </a>
    </li>
 </ul>
-<p>Copy right 2019</p>
 </div>
 </div>
 </footer>
