--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
 <h3>CONNECT EXPERTS</h3>
 <p>CONNECT EXPPERTS is a responsive web app to connect coding experts virtually with affordable prices, get your questions resolved in minimal time with industry standard experts.</p>
-<a href="expert.html">Read more</a>
+<a href="">Read more</a>
 </div>
 </div>
 </div>
@@ -48,7 +48,7 @@
 
 <footer>
 <div>
-<h2>Contact Swathi Masetty</h2>
+<h2>Contact</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
