Added href link
Added href link to open project page.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
 <h3>CONNECT EXPERTS</h3>
 <p>CONNECT EXPPERTS is a responsive web app to connect coding experts virtually with affordable prices, get your questions resolved in minimal time with industry standard experts.</p>
-<a href="">Read more</a>
+<a href="expert.html">Read more</a>
 </div>
 </div>
 </div>
