--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 <div>
           <h2>Skills and Tools</h2>
           <div class="row">
-          <div class"col-">
+          <div class="col-">
           <h3>Relevant Skills</h3>
           <ul>
             <li>UX Theory</li>
