--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <footer>
 <div>
-<h2>Contact</h2>
+<h2>Contact Swathi Masetty</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
