Updated the expert page

--- a/about.html
+++ b/about.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>About Swathi Masetty</title>
+<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 <header>
@@ -27,10 +33,9 @@
 <div>
   <div>
 
-  <picture>
-    <source srcset="img/mypicture.png" media="(max-width:767px)">
-      <img src="img/mypicture.png" alt="Swathi Masetty">
-    </picture>
+
+  <img src="img/mypicture.png" alt="Swathi Masetty">
+
 
 
     <div>
@@ -43,7 +48,7 @@
          My goal is to work as UX Designer and think in the customer point of view and design the things according to user goals and needs.
          Simultaneously would like to work on my own cooking websites where users can find Tipps and hacks for better cooking.
        </p>
-        <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" target="_blank"> Download my resume</a>
+        <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" class="button" target="_self">View CV</a>
 </div>
 
 <div>
@@ -87,7 +92,7 @@
 
 <footer id="contact">
   <div>
-<h2>Contact</h2>
+<h2>Contact Swathi Masetty</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
