--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
+  <head>
 <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
-<header>
-  <div>
-<img src="img/mylogo.jpg" alt="logo" >
+
+<header class="top">
+
+    <img src="img/mylogo.jpg" alt="logo" >
+<div>
 <nav>
-  <ul>
+  <ul class="navigation links">
     <li><a href="index.html">Work</a></li>
     <li><a href="about.html">About</a></li>
-    <li>
-      <a href="#contact">Contact</a>
-    </li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 </div>
 </header>
 
 <main>
-<div>
+<div class="Introduction">
 <div>
 <h1>Hi, My name is Swathi<span> "Former Software Test Engineer | UX Designer | Front End Developer from Hamburg,Germany"</span></h1>
 <p>A good designer is who can think in user's point of view and design according to them.</p>
@@ -31,17 +36,14 @@
 <div>
 <div>
 <h2>My Work</h2>
+<div class="CONNECT EXPERTS" id="work">
 <div>
-<div>
-<picture>
-<source srcset="img/appscreen1.jpg" media="(max-width:767px)">
 <img src="img/appscreen1.jpg" alt="apps splash screen">
-</picture>
 </div>
 <div>
 <h3>CONNECT EXPERTS</h3>
 <p>CONNECT EXPPERTS is a responsive web app to connect coding experts virtually with affordable prices, get your questions resolved in minimal time with industry standard experts.</p>
-<a href="expert.html" target="_self">Read more</a>
+<a href="expert.html" class="button" target="_self">Read more</a>
 </div>
 </div>
 </div>
@@ -55,7 +57,7 @@
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
 <div>
-<a href="24by7connectme@gmail.com">Email me</a>
+<a href="24by7@careerfoundry.com" class="button contact">Email</a>
 </div>
 <div>
  <h4>Connect me on</h4>
