Code updated in HTML and CSS

--- a/expert.html
+++ b/expert.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
   <title>Swathi UX Designer | Front End Developer</title>
 </head>
 
@@ -13,7 +13,7 @@
 
   <header>
     <div>
-      <img src="img/mylogo.jpg" alt="logo">
+      <img src="img/logo.png" class="logo" alt="logo">
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -45,11 +45,12 @@
         <h2>My Process</h2>
 
         <div>
-          <h2>User Research,Surveys and Interviews</h2>
-          <img src="img/Connect-Experts-Surveys-Interviews.jpg" alt="surveys and interviews screen">
+          <h3>User Research,Surveys and Interviews</h3>
           <p>
             To begin with the project, I started with Competitive analysis, Then I conducted user surveys and interviews which gave me a good amount of data to proceed further into design process
           </p>
+          <img src="img/Connect-Experts-Surveys-Interviews.jpg" alt="surveys and interviews screen">
+
         </div>
 
         <div>
