--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
 <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
 
-<header class="top">
-
-    <img src="img/mylogo.jpg" alt="logo" >
+<header>
 <div>
+  <img src="img/logo.png" class="logo" alt="logo" >
 <nav>
-  <ul class="navigation links">
+  <ul>
     <li><a href="index.html">Work</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="#contact">Contact</a></li>
@@ -26,9 +26,9 @@
 </header>
 
 <main>
-<div class="Introduction">
 <div>
-<h1>Hi, My name is Swathi<span> "Former Software Test Engineer | UX Designer | Front End Developer from Hamburg,Germany"</span></h1>
+<div>
+<h1>Hi, My name is Swathi<span> "Former Software Test Engineer | UX Designer | Front End Developer from Hamburg, Germany"</span></h1>
 <p>A good designer is who can think in user's point of view and design according to them.</p>
 </div>
 </div>
@@ -36,14 +36,15 @@
 <div>
 <div>
 <h2>My Work</h2>
-<div class="CONNECT EXPERTS" id="work">
+<div>
 <div>
 <img src="img/appscreen1.jpg" alt="apps splash screen">
 </div>
+
 <div>
 <h3>CONNECT EXPERTS</h3>
 <p>CONNECT EXPPERTS is a responsive web app to connect coding experts virtually with affordable prices, get your questions resolved in minimal time with industry standard experts.</p>
-<a href="expert.html" class="button" target="_self">Read more</a>
+<a href="expert.html" class="button" >Read more</a>
 </div>
 </div>
 </div>
@@ -60,7 +61,7 @@
 <a href="24by7@careerfoundry.com" class="button contact">Email</a>
 </div>
 <div>
- <h4>Connect me on</h4>
+ <h3>Connect me on</h3>
  <ul>
    <li>
      <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
