--- a/about.html
+++ b/about.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<meta charset="utf-8">
-<title>About Swathi Masetty</title>
-<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
+<title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
 <header>
   <div>
-<img src="img/mylogo.jpg" alt="logo" >
+<img src="img/logo.png" class="logo" alt="logo" >
 <nav>
   <ul>
     <li><a href="index.html">Work</a></li>
@@ -28,18 +25,11 @@
 <div>
   <div>
     <h1>About Me</h1>
+    <p>I am Swathi, Former Software Test Engineer and certified UX Designer from Germany, Desiging has been my all time favouite irrespective of any field.I love connecting with the people and know their expectations, in this way I can design a better product for users. I love the work and values of the customer.</p>
   </div>
 </div>
-<div>
-  <div>
 
 
-  <img src="img/mypicture.png" alt="Swathi Masetty">
-
-
-
-    <div>
-      <div>
       <h2>My Story</h2>
         <p>
           I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
@@ -92,7 +82,7 @@
 
 <footer id="contact">
   <div>
-<h2>Contact Swathi Masetty</h2>
+<h2>Contact</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
@@ -100,7 +90,7 @@
 <a href="24by7connectme@gmail.com">Email me</a>
 </div>
 <div>
- <h4>Connect me on</h4>
+ <h3>Contact me on</h3>
  <ul>
    <li>
      <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
