--- a/about.html
+++ b/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<meta charset="utf-8">
-<title>About Swathi Masetty</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
+<title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
 <header>
   <div>
-<img src="img/mylogo.jpg" alt="logo" >
+<img src="img/logo.png" class="logo" alt="logo" >
 <nav>
   <ul>
     <li><a href="index.html">Work</a></li>
@@ -22,19 +25,11 @@
 <div>
   <div>
     <h1>About Me</h1>
+    <p>I am Swathi, Former Software Test Engineer and certified UX Designer from Germany, Desiging has been my all time favouite irrespective of any field.I love connecting with the people and know their expectations, in this way I can design a better product for users. I love the work and values of the customer.</p>
   </div>
 </div>
-<div>
-  <div>
-
-  <picture>
-    <source srcset="img/mypicture.png" media="(max-width:767px)">
-      <img src="img/mypicture.png" alt="Swathi Masetty">
-    </picture>
 
 
-    <div>
-      <div>
       <h2>My Story</h2>
         <p>
           I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
@@ -43,7 +38,7 @@
          My goal is to work as UX Designer and think in the customer point of view and design the things according to user goals and needs.
          Simultaneously would like to work on my own cooking websites where users can find Tipps and hacks for better cooking.
        </p>
-        <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" target="_blank"> Download my resume</a>
+        <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" class="button" target="_self">View CV</a>
 </div>
 
 <div>
@@ -95,7 +90,7 @@
 <a href="24by7connectme@gmail.com">Email me</a>
 </div>
 <div>
- <h4>Connect me on</h4>
+ <h3>Contact me on</h3>
  <ul>
    <li>
      <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
