--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
+  <head>
 <meta charset="utf-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
+
 <header>
-  <div>
-<img src="img/mylogo.jpg" alt="logo" >
+<div>
+  <img src="img/logo.png" class="logo" alt="logo" >
 <nav>
   <ul>
     <li><a href="index.html">Work</a></li>
     <li><a href="about.html">About</a></li>
-    <li>
-      <a href="#contact">Contact</a>
-    </li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 </div>
@@ -23,7 +28,7 @@
 <main>
 <div>
 <div>
-<h1>Hi, My name is Swathi<span> "Former Software Test Engineer | UX Designer | Front End Developer from Hamburg,Germany"</span></h1>
+<h1>Hi, My name is Swathi<span> "Former Software Test Engineer | UX Designer | Front End Developer from Hamburg, Germany"</span></h1>
 <p>A good designer is who can think in user's point of view and design according to them.</p>
 </div>
 </div>
@@ -33,15 +38,13 @@
 <h2>My Work</h2>
 <div>
 <div>
-<picture>
-<source srcset="img/appscreen1.jpg" media="(max-width:767px)">
 <img src="img/appscreen1.jpg" alt="apps splash screen">
-</picture>
 </div>
+
 <div>
 <h3>CONNECT EXPERTS</h3>
 <p>CONNECT EXPPERTS is a responsive web app to connect coding experts virtually with affordable prices, get your questions resolved in minimal time with industry standard experts.</p>
-<a href="expert.html" target="_self">Read more</a>
+<a href="expert.html" class="button" >Read more</a>
 </div>
 </div>
 </div>
@@ -55,10 +58,10 @@
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
 <div>
-<a href="24by7connectme@gmail.com">Email me</a>
+<a href="24by7@careerfoundry.com" class="button contact">Email</a>
 </div>
 <div>
- <h4>Connect me on</h4>
+ <h3>Connect me on</h3>
  <ul>
    <li>
      <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
