--- a/expert.html
+++ b/expert.html
@@ -12,10 +12,10 @@
 <body>
 
   <header>
-    <div>
+    <div class"container">
       <img src="img/logo.png" class="logo" alt="logo">
       <nav>
-        <ul>
+        <ul class="navigation">
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -27,8 +27,8 @@
   <main>
 
     <!-- the Intro -->
-    <div>     <!-- section div -->
-      <div>    <!-- container div -->
+    <div id="project intro">     <!-- section div -->
+      <div class="container">    <!-- container div -->
         <h1>CONNECT EXPERTS</h1>
         <img src="img/appscreen1.jpg" alt="apps splash screen">
         <h2>The Problem</h2>
@@ -40,8 +40,8 @@
     </div>
 
     <!-- the Process -->
-    <div>     <!-- section div -->
-      <div>    <!-- container div -->
+    <div id="My process">     <!-- section div -->
+      <div class="container">    <!-- container div -->
         <h2>My Process</h2>
 
         <div>
@@ -91,8 +91,8 @@
 
 
     <!-- the Conclusion -->
-    <div>     <!-- section div -->
-      <div>    <!-- container div -->
+    <div id="Conclusion">     <!-- section div -->
+      <div class="container">    <!-- container div -->
         <h2>Conclusion</h2>
         <p>
           Looking forward to put thos best practices and ideas to recreate any kind of connect experts in any field.
@@ -103,7 +103,7 @@
   </main>
 
   <footer>
-    <div>
+    <div class="Container">
       <h2>Contact</h2>
       <p>
         Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
@@ -111,7 +111,7 @@
       <div>
         <a href="24by7connectme@gmail.com">Email me</a>
       </div>
-      <div>
+      <div claa="social">
         <h3>Connect me on</h3>
         <ul>
           <li>
