--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <header>
-  <div>
+  <div class="container">
 <img src="img/logo.png" class="logo" alt="logo" >
 <nav>
-  <ul>
+  <ul class="navigation">
     <li><a href="index.html">Work</a></li>
     <li><a href="about.html">About Me</a></li>
     <li><a href="#contact">Contact</a></li>
@@ -22,14 +22,15 @@
 </header>
 
 <main>
-<div>
-  <div>
+<div id="hero">
+  <div class="container">
     <h1>About Me</h1>
     <p>I am Swathi, Former Software Test Engineer and certified UX Designer from Germany, Desiging has been my all time favouite irrespective of any field.I love connecting with the people and know their expectations, in this way I can design a better product for users. I love the work and values of the customer.</p>
   </div>
 </div>
 
-
+<div id="intro">
+  <div class="container">
       <h2>My Story</h2>
         <p>
           I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
@@ -81,7 +82,7 @@
 </main>
 
 <footer id="contact">
-  <div>
+  <div class="container">
 <h2>Contact</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
@@ -89,7 +90,7 @@
 <div>
 <a href="24by7connectme@gmail.com">Email me</a>
 </div>
-<div>
+<div class="social">
  <h3>Contact me on</h3>
  <ul>
    <li>
