Code for style sheet is updated

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -88,7 +89,7 @@
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
 <div>
-<a href="24by7connectme@gmail.com">Email me</a>
+<a href="24by7connectme@gmail.com" class="button"> Email me</a>
 </div>
 <div class="social">
  <h3>Contact me on</h3>
@@ -109,7 +110,6 @@
 </a>
    </li>
 </ul>
-<p>Copy right 2019</p>
 </div>
 </footer>
 </body>
