--- a/expert.html
+++ b/expert.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -113,7 +114,7 @@
       </div>
       <div claa="social">
         <h3>Connect me on</h3>
-        <ul>
+        <ul class="social-media-list">
           <li>
             <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
               <svg height="25" id="Layer_1" version="1.1" viewBox="0 0 512 512" width="25" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/"
