--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2>My Work</h2>
 <div class="row">
 <div>
-<img src="img/appscreen1.jpg" alt="apps splash screen">
+<img src="img/appscreen1.jpg" class="appscreen1" alt="apps splash screen">
 </div>
 
 <div>
