--- a/about.html
+++ b/about.html
@@ -9,18 +9,19 @@
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body>
-<header>
+  <header>
   <div class="container">
-<img src="img/logo.png" class="logo" alt="logo" >
-<nav>
-  <ul class="navigation">
-    <li><a href="index.html">Work</a></li>
-    <li><a href="about.html">About Me</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-</div>
-</header>
+    <img src="img/logo.png" class="logo" alt="logo" >
+  <nav>
+    <ul class="navigation">
+      <li><a href="index.html">Work</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  </div>
+  </header>
+
 
 <main>
 <div id="hero">
@@ -32,6 +33,9 @@
 
 <div id="intro">
   <div class="container">
+
+    <div class="row">
+    <div class="col-">
       <h2>My Story</h2>
         <p>
           I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
@@ -41,7 +45,7 @@
          Simultaneously would like to work on my own cooking websites where users can find Tipps and hacks for better cooking.
        </p>
         <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" class="button" target="_self">View CV</a>
-</div>
+
 
 <div>
           <h2>Skills and Tools</h2>
@@ -77,27 +81,41 @@
         </div>
       </div>
 
-    </div>
+  
   </div>
 
 </main>
 
 <footer id="contact">
-  <div class="container">
+<div class="container">
 <h2>Contact</h2>
 <p>
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
 <div>
-<a href="24by7connectme@gmail.com" class="button"> Email me</a>
+<a href="24by7@careerfoundry.com" class="button contact">Email</a>
 </div>
 <div class="social">
- <h3>Contact me on</h3>
+ <h3>Connect me on</h3>
  <ul>
    <li>
      <a href="https://www.linkedin.com/in/swathi-masetty-a64569182/" target="blank">
-       <svg height="25" id="Layer_1" version="1.1" viewBox="0 0 512 512" width="25" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"><defs id="defs12"/><g id="g5891"><rect height="512" id="rect2987" rx="64" ry="64" style="fill:#0083be;fill-opacity:1;fill-rule:nonzero;stroke:none" width="512" x="0" y="5.6843419e-014"/><g id="g9-1" transform="matrix(1.5537946,0,0,1.5537946,-140.87332,-132.64552)"><rect height="166.021" id="rect11" style="fill:#ffffff" width="55.194" x="129.957" y="200.35699"/><path d="m 157.927,120.303 c -18.884,0 -31.222,12.415 -31.222,28.687 0,15.93 11.963,28.687 30.491,28.687 h 0.357 c 19.245,0 31.224,-12.757 31.224,-28.687 -0.357,-16.272 -11.978,-28.687 -30.85,-28.687 z" id="path13-0" style="fill:#ffffff"/><path d="m 320.604,196.453 c -29.277,0 -42.391,16.101 -49.734,27.41 v -23.506 h -55.18 c 0.732,15.573 0,166.021 0,166.021 h 55.179 V 273.66 c 0,-4.963 0.357,-9.924 1.82,-13.471 3.982,-9.911 13.068,-20.178 28.313,-20.178 19.959,0 27.955,15.23 27.955,37.539 v 88.828 h 55.182 v -95.206 c 0,-50.996 -27.227,-74.719 -63.535,-74.719 z" id="path15" style="fill:#ffffff"/></g></g></svg>
-   </a>
+       <svg height="25" id="Layer_1" version="1.1" viewBox="0 0 512 512" width="25" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/"
+         xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg">
+         <defs id="defs12" />
+         <g id="g5891">
+           <rect height="512" id="rect2987" rx="64" ry="64" style="fill:#0083be;fill-opacity:1;fill-rule:nonzero;stroke:none" width="512" x="0" y="5.6843419e-014" />
+           <g id="g9-1" transform="matrix(1.5537946,0,0,1.5537946,-140.87332,-132.64552)">
+             <rect height="166.021" id="rect11" style="fill:#ffffff" width="55.194" x="129.957" y="200.35699" />
+             <path d="m 157.927,120.303 c -18.884,0 -31.222,12.415 -31.222,28.687 0,15.93 11.963,28.687 30.491,28.687 h 0.357 c 19.245,0 31.224,-12.757 31.224,-28.687 -0.357,-16.272 -11.978,-28.687 -30.85,-28.687 z" id="path13-0"
+               style="fill:#ffffff" />
+             <path
+               d="m 320.604,196.453 c -29.277,0 -42.391,16.101 -49.734,27.41 v -23.506 h -55.18 c 0.732,15.573 0,166.021 0,166.021 h 55.179 V 273.66 c 0,-4.963 0.357,-9.924 1.82,-13.471 3.982,-9.911 13.068,-20.178 28.313,-20.178 19.959,0 27.955,15.23 27.955,37.539 v 88.828 h 55.182 v -95.206 c 0,-50.996 -27.227,-74.719 -63.535,-74.719 z"
+               id="path15" style="fill:#ffffff" />
+           </g>
+         </g>
+       </svg>
+        </a>
  </li>
    <li>
      <a href="https://www.xing.com/profile/Swathi_Ryagalla2/cv" target="blank">
@@ -110,6 +128,7 @@
 </a>
    </li>
 </ul>
+</div>
 </div>
 </footer>
 </body>
