--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
-<body>
+<body id="about-page">
   <header>
   <div class="container">
     <img src="img/logo.png" class="logo" alt="logo" >
@@ -31,12 +31,12 @@
   </div>
 </div>
 
-<div id="intro">
+<div="intro">
   <div class="container">
 
-    <div class="row">
-    <div class="col-">
+
       <h2>My Story</h2>
+
         <p>
           I am former software test engineer and certified UX Designer, currently I am doing my Front End Development course from CareerFoundr(CF), I am passionate at about creating excellent designs, I live in Germany.
         </p>
@@ -47,41 +47,25 @@
         <a href="https://drive.google.com/file/d/1Gzs0S-z4Uje-jzQuUWy96_bWT23n46GZ/view?usp=drivesdk" class="button" target="_self">View CV</a>
 
 
-<div>
+<div id="skills and tools">
+
           <h2>Skills and Tools</h2>
           <div class="row">
-          <div class="col-">
+          <div class="col-md-6">
           <h3>Relevant Skills</h3>
-          <ul>
-            <li>UX Theory</li>
-              <li>User Centered Design</li>
-              <li>Emotional and Visual Design</li>
-              <li>Competitive Analysis</li>
-              <li>Generative and Evaluative Research</li>
-              <li>user Personas and Business Requirements</li>
-              <li>Mobile-First and Responsive Design</li>
-              <li>Information Archietecture and user flows</li>
-              <li>Iterative Wireframing and Prototyping</li>
-              <li>Design Documentation and Presentation</li>
-            </ul>
+          <p> UX Research | user Surveys and Interviews, Competotive Analysis | User personas | user flows | User Testing | Wireframing | Mocups</p>
           </div>
-          <div>
+          <div class="col-md-6">
             <h3>Tools I use</h3>
-            <ul>
-              <li>Adobe XD</li>
-                <li>Figma</li>
-                <li>Photoshop</li>
-                <li>Competitive Analysis</li>
-                <li>Balsamiq</li>
-                <li>Yeplin</li>
-              </ul>
+            <p>Balsamiq |Figma | Adobe XD| Photoshop |Prot</p>
+
             </div>
           </div>
 
         </div>
       </div>
 
-  
+
   </div>
 
 </main>
@@ -93,7 +77,7 @@
   Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
   </p>
 <div>
-<a href="24by7@careerfoundry.com" class="button contact">Email</a>
+<a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
 </div>
 <div class="social">
  <h3>Connect me on</h3>
@@ -130,6 +114,7 @@
 </ul>
 </div>
 </div>
+<p>copyright Swathi Masetty 2019</p>
 </footer>
 </body>
 </html>
