--- a/expert.html
+++ b/expert.html
@@ -111,7 +111,7 @@
     Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
     </p>
   <div>
-  <a href="24by7@careerfoundry.com" class="button contact">Email</a>
+  <a href="24by7@careerfoundry.com" class="button SEND ME AN EMAIL</a>
   </div>
   <div class="social">
    <h3>Connect me on</h3>
@@ -147,6 +147,7 @@
      </li>
   </ul>
   </div>
+  <p>copyright Swathi Masetty 2019</p>
   </div>
   </footer>
   </body>
