--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <title>Swathi UX Designer | Front End Developer</title>
+
 </head>
 <body>
 
@@ -990,6 +991,7 @@
 </div>
 </div>
 </div>
+
 </main>
 
 <footer id="contact">
@@ -1038,5 +1040,6 @@
 <p>copyright Swathi Masetty 2019</p>
 </div>
 </footer>
+<script src="js/script.js"></script>
 </body>
 </html>
