file name updated

--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,6 @@
 <p>copyright Swathi Masetty 2019</p>
 </div>
 </footer>
-<script src="js/script.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
