--- a/about.html
+++ b/about.html
@@ -116,6 +116,6 @@
 </div>
 <p>copyright Swathi Masetty 2019</p>
 </footer>
-<script src="js/script.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
