--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body id="about-page">
   <header>
   <div class="container">
-    <img src="img/logo.png" class="logo" alt="logo" >
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
   <nav>
     <ul class="navigation">
       <li><a href="index.html">Work</a></li>
