--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header>
 <div class="container">
-  <img src="img/logo.png" class="logo" alt="logo" >
+  <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
 <nav>
   <ul class="navigation">
     <li><a href="index.html">Work</a></li>
@@ -30,8 +30,9 @@
 <div id="hero">
   <div class="container">
 <h1>Hi! My name is Swathi.<span>UX Designer, Front End Developer & Former Software Test Engineer from Germany</span></h1>
-<p id="caption"><i>"A Good design is according to human needs and goals"</i></p>
+<p class="caption">"A Good design is according to human needs and goals"</p>
 <p>Certified UX Designer, Front end developer. My work experience was in Software Testing field. I came across various challenges where I proved myself as best, so I want to use those practices, analysis, industry skills as a UX designer as well.</p>
+</div>
 </div>
 
 <div id="work">
