--- a/expert.html
+++ b/expert.html
@@ -14,7 +14,7 @@
 
   <header>
   <div class="container">
-    <img src="img/logo.png" class="logo" alt="logo" >
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
   <nav>
     <ul class="navigation">
       <li><a href="index.html">Work</a></li>
@@ -77,7 +77,7 @@
             Next step was to create paper sketches, wireframes and prototype of the app, I started with paper sketches. drafted with paper and pencil, I then created their more detailed mid-fidelity versions using Balsamiq tool and further refined and linked the screens to beome a clickalble prototype.</p>
           <p>
             Evolution of design shown for Home page, Filter By, Experts profile, Book a call, and Confirmation page from paper sketches to clickalble prototype.</p>
-            <img src="img/Evolution-Of-Screens.jpg" alt="Designing">
+            <img src="img/Connect-Experts-prototype evolution.jpg" alt="Designing">
         </div>
 
 <div>
@@ -111,7 +111,7 @@
     Would you like to work and discuss about oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
     </p>
   <div>
-  <a href="24by7@careerfoundry.com" class="button SEND ME AN EMAIL</a>
+  <a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
   </div>
   <div class="social">
    <h3>Connect me on</h3>
@@ -150,6 +150,6 @@
   <p>copyright Swathi Masetty 2019</p>
   </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
   </body>
   </html>
