--- a/expert.html
+++ b/expert.html
@@ -14,7 +14,7 @@
 
   <header>
   <div class="container">
-    <img src="img/logo.png" class="logo" alt="logo" >
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
   <nav>
     <ul class="navigation">
       <li><a href="index.html">Work</a></li>
@@ -77,7 +77,7 @@
             Next step was to create paper sketches, wireframes and prototype of the app, I started with paper sketches. drafted with paper and pencil, I then created their more detailed mid-fidelity versions using Balsamiq tool and further refined and linked the screens to beome a clickalble prototype.</p>
           <p>
             Evolution of design shown for Home page, Filter By, Experts profile, Book a call, and Confirmation page from paper sketches to clickalble prototype.</p>
-            <img src="img/Evolution-Of-Screens.jpg" alt="Designing">
+            <img src="img/Connect-Experts-prototype evolution.jpg" alt="Designing">
         </div>
 
 <div>
