js code has been updated

--- a/about.html
+++ b/about.html
@@ -5,18 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+     <script src="https://kit.fontawesome.com/c70fa02c5f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
 <title>Swathi UX Designer | Front End Developer</title>
 </head>
 <body id="about-page">
   <header>
   <div class="container">
+    <div class="navtoggle" id="myNavtoggle">
     <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
   <nav>
     <ul class="navigation">
       <li><a href="index.html">Work</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="#contact">Contact</a></li>
+        <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
     </ul>
   </nav>
   </div>
@@ -116,6 +119,11 @@
 </div>
 <p>copyright Swathi Masetty 2019</p>
 </footer>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
+
 <script src="js/scripts.js"></script>
 </body>
 </html>
