--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <script src="https://kit.fontawesome.com/c70fa02c5f.js" crossorigin="anonymous"></script>
 
 <title>Swathi UX Designer | Front End Developer</title>
 
@@ -15,12 +16,14 @@
 
 <header>
 <div class="container">
+<div class="navtoggle" id="myNavtoggle">
   <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
 <nav>
   <ul class="navigation">
     <li><a href="index.html">Work</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="#contact">Contact</a></li>
+    <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   </ul>
 </nav>
 </div>
@@ -1041,6 +1044,10 @@
 <p>copyright Swathi Masetty 2019</p>
 </div>
 </footer>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
