--- a/expert.html
+++ b/expert.html
@@ -35,7 +35,7 @@
     <div id="project intro">     <!-- section div -->
       <div class="container">    <!-- container div -->
         <h1>CONNECT EXPERTS</h1>
-        <img src="img/appscreen1.jpg" alt="apps splash screen">
+        <img src="img/appscreen1.jpg" class="appscreen1" alt="apps splash screen">
         <h2>The Problem</h2>
         <p>
           Our users, needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs. Because they want quick and professional advice on day to day problems.Quantitative and Qualitative measure: ‘ We will
