--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>My Work</h2>
 <div class="row">
 <div class="column col-md-6 col-lg-7">
-<img src="img/appscreen1.jpg" class="appscreen1" alt="apps splash screen">
+<img src="img/Connect-Experts-prototype evolution.jpg" class="appscreen1" alt="apps splash screen">
 </div>
 
 <div class="column col-md-6 col-lg-5">
