--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <div id="hero">
       <div class="container">
         <h1>Hi! My name is Swathi.<span>UX Designer, Front End Developer & Former Software Test Engineer from Germany</span></h1>
+
+<picture>
+  <source srcset="img/interactiondesign.png" media="(max-width:767px)">
+    <img src="img/interactiondesign.png" alt="illutsration screen">
+  </picture>
         <p class="caption">"a good design is according to human needs and goals"</p>
         <p>Certified UX Designer, Front end developer. My work experience was in Software Testing field. I came across various challenges where I proved myself as best, so I want to use those practices, analysis, industry skills as a UX designer as
           well.</p>
@@ -998,8 +1003,8 @@
             </svg>
           </div>
           <div class="col-md-6 col-lg-5">
-            <h3> CSS Animation </h3>
-            <p>Here is the CSS Animation that I created.</p>
+            <h3> CSS ANNIMATION </h3>
+            <p>Here is the CSS Animation that I created. I have chosen a Brandenburg Gate as it contains multiple elements, by using multiple properties and keyframes, animated the image as shown in the picture.</p>
           </div>
         </div>
       </div>
@@ -1011,7 +1016,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>
-        Would you like to discuss oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
+        Would you like to discuss oppurtunities? Please get in touch through below social networks. Prefer sending an Email?
       </p>
       <div>
         <a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
