--- a/about.html
+++ b/about.html
@@ -76,12 +76,11 @@
     </div>
 
   </main>
-
   <footer id="contact">
     <div class="container">
       <h2>Contact</h2>
       <p>
-        Would you like to discuss oppurtunities? Please get in touch. Call: <a href="tel:+491234567">+49 1234567</a> or follow me on below social networks, Prefer sending an Email?
+        Would you like to discuss oppurtunities? Please get in touch through below social networks. Prefer sending an Email?
       </p>
       <div>
         <a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
@@ -140,12 +139,11 @@
           </li>
         </ul>
       </div>
+      <p>copyright Swathi Masetty 2019</p>
     </div>
-    <p>copyright Swathi Masetty 2019</p>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-
   <script src="js/scripts.js"></script>
-</body>
+  </body>
 
-</html>
+  </html>
