--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h1>Hi! My name is Swathi.<span>UX Designer, Front End Developer & Former Software Test Engineer from Germany</span></h1>
 
 <picture>
-  <source srcset="img/interactiondesign.jpg" media="(max-width:767px)">
-    <img src="img/interactiondesign.jpg" alt="illutsration screen">
+  <source srcset="img/interactiondesign.png" media="(max-width:767px)">
+    <img src="img/interactiondesign.png" alt="illutsration screen">
   </picture>
         <p class="caption">"a good design is according to human needs and goals"</p>
         <p>Certified UX Designer, Front end developer. My work experience was in Software Testing field. I came across various challenges where I proved myself as best, so I want to use those practices, analysis, industry skills as a UX designer as
