--- a/expert.html
+++ b/expert.html
@@ -39,10 +39,13 @@
       <div class="container">
         <!-- container div -->
         <h1>CONNECT EXPERTS</h1>
-        <img src="img/Connect-Experts-prototypeevolution.jpg" class="appscreen1" alt="apps screen">
+        <h2>A mobile-first approach to web application design</h2>
+        <img src="img/mobilescreen.png" class="appscreen1" alt="apps screen">
         <h2>The Problem</h2>
         <p>
-          Our users, needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs. Because they want quick and professional advice on day to day problems.Quantitative and Qualitative measure: ‘ We will
+          Our users, needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs.
+          <p>Because they want quick and professional advice on day to day problems.</p>
+          <p>‘ We will
           know this to be true when users are happy with our app, no. of people downloaded and using the app and from user reviews.
         </p>
       </div>
