--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
             </svg>
           </div>
           <div class="col-md-6 col-lg-5">
-            <h3> CSS ANNIMATION </h3>
+            <h3>CSS ANIMATIONS</h3>
             <p>Here is the CSS Animation that I created. I have chosen a Brandenburg Gate as it contains multiple elements, by using multiple properties and keyframes, animated the image as shown in the picture.</p>
           </div>
         </div>
