--- a/expert.html
+++ b/expert.html
@@ -39,14 +39,11 @@
       <div class="container">
         <!-- container div -->
         <h1>CONNECT EXPERTS</h1>
-        <h2>A mobile-first approach to web application design</h2>
-        <img src="img/mobilescreen.png" class="appscreen1" alt="apps screen">
+        <img src="img/Connect-Experts-prototypeevolution.jpg" class="appscreen1" alt="apps screen">
         <h2>The Problem</h2>
         <p>
-          Our users, needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs.
-          <p>Because they want quick and professional advice on day to day problems.</p>
-          <p>‘ We will
-          know this to be true when users are happy with our app, no. of people downloaded and using the app and from user reviews.
+          Our users’ needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs. Because they want quick and professional advice on day to day problems.
+Quantitative and Qualitative measure: We will know this to be true when users are happy with our app, no. of people downloaded and using the app and from user reviews.
         </p>
       </div>
     </div>
@@ -59,7 +56,7 @@
         <h2>My Process</h2>
 
         <div>
-          <h3>User Research,Surveys and Interviews</h3>
+          <h3>User Research, Surveys and Interviews</h3>
           <p>
             To begin with the project, I started with Competitive analysis, Then I conducted user surveys and interviews which gave me a good amount of data to proceed further into design process
           </p>
@@ -70,7 +67,7 @@
         <div>
           <h3>User Personas</h3>
           <p>
-            The two personas are Doro and Dycer, one is yound professional working as developer and other persona is trying to restart her career as developer.
+            The two personas are Doro and Dycer, one is young professional working as developer and other persona is trying to restart her career as developer.
           </p>
           <img src="img/Connect-Experts-Userpersonas.jpg" alt="User Persona">
         </div>
@@ -88,16 +85,16 @@
           <h3>Designing</h3>
           <p>
             Next step was to create paper sketches, wireframes and prototype of the app, I started with paper sketches. drafted with paper and pencil, I then created their more detailed mid-fidelity versions using Balsamiq tool and further refined
-            and linked the screens to beome a clickalble prototype.</p>
+            and linked the screens to become a clickable prototype.</p>
           <p>
-            Evolution of design shown for Home page, Filter By, Experts profile, Book a call, and Confirmation page from paper sketches to clickalble prototype.</p>
+            Evolution of design shown for Home page, Filter By, Experts profile, Book a call, and Confirmation page from paper sketches to clickable prototype.</p>
           <img src="img/Connect-Experts-prototypeevolution.jpg" alt="Designing">
         </div>
 
         <div>
           <h3>Usability Testing and Results</h3>
           <p>
-            Once the prototype is ready, I alowed it for testing with potential users as well as non potential users, then documented the results for further imrovements.
+            Once the prototype is ready, I allowed it for testing with potential users as well as non-potential users, then documented the results for further improvements.
           </p>
           <img src="img/Usabilitytest-Results1.JPG" alt="Designing">
           <img src="img/Usabilitytest-Results2.JPG" alt="Designing">
@@ -113,7 +110,7 @@
         <!-- container div -->
         <h2>Conclusion</h2>
         <p>
-          Looking forward to put thos best practices and ideas to recreate any kind of connect experts in any field.
+          Looking forward to putting those best practices and ideas to recreate any kind of connect experts in any field.
         </p>
       </div>
     </div>
@@ -124,7 +121,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>
-        Would you like to discuss oppurtunities? Please get in touch through below social networks. Prefer sending an Email?
+        Would you like to discuss opportunities? Please get in touch through below social networks. Prefer sending an Email?
       </p>
       <div>
         <a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
