image has been updated in expert page

--- a/expert.html
+++ b/expert.html
@@ -39,7 +39,7 @@
       <div class="container">
         <!-- container div -->
         <h1>CONNECT EXPERTS</h1>
-        <img src="img/Connect-Experts-prototypeevolution.jpg" class="appscreen1" alt="apps screen">
+        <img src="img/mobilescreen.png" class="appscreen1" alt="apps screen">
         <h2>The Problem</h2>
         <p>
           Our users’ needs a way to find knowledgeable Expert and get all the questions answered in minimal time with fewer inputs. Because they want quick and professional advice on day to day problems.
